--- a/style.css
+++ b/style.css
@@ -21,6 +21,11 @@
     border-radius: 4px;
 }
 
+header-section {
+    width: 95%;
+    max-width: 1600px;
+}
+
 /* Main-style */
 
 .nav-container {
@@ -50,4 +55,74 @@
 
 .nav-container button {
     margin: 24px 120px 0;
+}
+
+#banner {
+    background-image: url("./assets/hero-bg.png");
+    height: 674px;
+    padding: 115px 120px 179px;
+
+}
+
+.banner-container {
+    /* max-width: 1316px;
+    justify-content: center; */
+    /* display: flex; */
+    max-width: 13616;
+    height: 379px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+
+}
+
+#banner .banner-container .banner-information {
+    font-size: 16px;
+    color: #469165;
+    background-color: #FFFFFF;
+    max-width: 229px;
+    padding: 8px;
+    padding-right: 12px;
+    padding-left: 34px;
+    border-radius: 1000px;
+    margin-bottom: 16px;
+}
+
+.banner-container h1 {
+    font-size: 72px;
+
+}
+
+.banner-container .banner-heading {
+    gap: 10px;
+}
+
+.banner-container .heading1 {
+    color: #FFFFFF;
+    /* margin-bottom: 8px; */
+
+}
+
+.banner-container .heading2 {
+    color: #30B868;
+    margin-bottom: 8px;
+}
+
+.banner-container .banner-text {
+    font-size: 16px;
+    /* line-height: 24px; */
+    color: #FFFFFF;
+    /* gap: 24px; */
+    margin-bottom: 32px;
+
+}
+
+.banner-text .text1 {
+    margin-bottom: 10px;
+}
+
+.banner-container .banner-button {
+    display: flex;
+    gap: 16px;
 }
