--- a/style.css
+++ b/style.css
@@ -21,6 +21,11 @@
     border-radius: 4px;
 }
 
+.btn:hover {
+    background-color: hsl(28, 92%, 50%);
+}
+
+
 header-section {
     width: 95%;
     max-width: 1600px;
@@ -68,7 +73,7 @@ header-section {
     /* max-width: 1316px;
     justify-content: center; */
     /* display: flex; */
-    max-width: 13616;
+    max-width: 1360;
     height: 379px;
     display: flex;
     flex-direction: column;
@@ -125,4 +130,80 @@ header-section {
 .banner-container .banner-button {
     display: flex;
     gap: 16px;
+}
+
+#features {
+    max-width: 1600px;
+}
+
+#features .features-container {
+    justify-content: center;
+}
+
+#features .features-container .features-heading {
+    /* width: 1360px; */
+    /* height: 152px; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+#features .features-container .features-heading h2 {
+    font-size: 48px;
+    color: #001931;
+    margin-bottom: 16px;
+    margin-top: 40px;
+}
+
+.features-heading p {
+    color: #627382;
+    font-size: 16px;
+    line-height: 20px;
+}
+
+.card {
+    max-width: 1360px;
+    display: flex;
+    margin: 44px auto 120px;
+    gap: 24px;
+
+}
+
+.card .card1 {
+    width: 322px;
+    height: 300px;
+    box-shadow: #0000002b 0 0 8px 0;
+}
+
+
+
+.card .card-img {
+    width: 60px;
+    height: 60px;
+    background-color: #F95555;
+    border-radius: 50px;
+    padding: 15px;
+    margin: 69px auto 16px;
+}
+
+.card h4 {
+    color: #001931;
+    font-size: 24px;
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 16px;
+    margin-left: 24px;
+    margin-right: 24px;
+
+}
+
+.card p {
+    text-align: center;
+    font-size: 16px;
+    line-height: 20px;
+    color: #627382;
+    margin-left: 24px;
+    margin-right: 24px;
 }
