--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@
     color: white;
     border: none;
     border-radius: 4px;
+    display: inline-flex;
+    align-items: center;
+    gap: 10px;
 }
 
 .btn:hover {
@@ -26,7 +29,7 @@
 }
 
 
-header-section {
+.header-section {
     width: 95%;
     max-width: 1600px;
 }
@@ -288,3 +291,41 @@ header-section {
 .flex img {
     margin-bottom: 10px;
 }
+
+#challenge {
+    max-width: 1600px;
+}
+
+#challenge .challenge-container {
+    max-width: 1360px;
+    height: 384px;
+    background-color: #F7F6F2;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.challenge-container h2 {
+    font-size: 48px;
+    text-align: center;
+    margin-bottom: 16px;
+    color: #001931;
+}
+
+.challenge-container p {
+    font-size: 16px;
+    line-height: 24px;
+    color: #627382;
+    margin-bottom: 16px;
+    text-align: center;
+}
+
+.challenge-container button {
+    margin-bottom: 16px;
+}
+
+/* .challenge-container .p-under {
+    line-height: 20px;
+} */
